1.api-gateway 调试user-service 2.user-service 开发 3.order-service 开发 3.openFeign 调用order测试

--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,10 @@
 
     <modules>
         <module>future-auth-center</module>
-        <module>future-gateway</module>
         <module>future-user-center</module>
         <module>future-commons</module>
+        <module>future-order-center</module>
+        <module>future-api-gateway</module>
     </modules>
 
     <properties>
