--- a/future-order-center/pom.xml
+++ b/future-order-center/pom.xml
@@ -8,12 +8,13 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+    <modules>
+        <module>future-order-service</module>
+        <module>future-order-api</module>
+    </modules>
 
-    <artifactId>future-gateway</artifactId>
+    <artifactId>future-order-center</artifactId>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
 
 </project>
