--- a/future-user-center/pom.xml
+++ b/future-user-center/pom.xml
@@ -10,10 +10,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>future-user-center</artifactId>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>future-user-service</module>
+        <module>future-user-api</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-
 </project>
